js/js.translator/testData/incremental/invalidation/inlineFunctionAnnotationsWithCrossModuleInliner/lib1/l1.2.kt
@JsExport
class MyClassA {
    @JsName("bar")
    inline fun foo() = 42
}
